[metadata]
name = vex-lang
version = 1.0.0
author = Bernardo Guidas
description = Linguagem de automação estilo Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    vex = vex.runtime:main